Active Viewer Styling + Minor iframe Text Changes
- Active viewer now gets styled with a "RoyalBlue" border
  - Changed grid layout types to "clean"
  - Now uses only CSS for borders
  - Clicking a previously "inactive viewer" removes the styling from the
    prior "active viewer" and adds it to the new one
- Minor change in sizing of the inline text for the viewers:
  - Coordinate label size is now 100% & "Resize" button size is now 80%

To Do:
- Implement separate heteroatom/ligand controls in the "Viewer Controls"
  panel.
  - Will probably need to modify the current compound controls to better
    distinguish ligands
- Make viewer control functions work with variables rather than having
  to specify every case
  - Will allow it to work with ligands separately (hetatoms)

Bugs to fix:
- Loading a new file does not reset the display options or make the
  new file get displayed with the same settings as the previous one
x Attempting to use the surface control on an incompatible file
  will cause it to stop working until Hydra is reloaded
  - Actual cause seems to be the conflicting commands issued by the
    mouse listener

Other, Known Bugs:
1) Chrome won't allow calls between the parent and iframes
  - Origins for the primary frame and iframe are both "null"
  -> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
   even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js
4) Still some strangeness with magenta bond connections in models
   3Dmol is reading from docking output.  Very minor now though.

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds unt

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -171,10 +171,10 @@
 	
 	<div id='compoundTitle' class='text' style="position:aboslute; left:0; top:0;"></div>
 	
-	<div id="webixID" class='text' style="font-size:80%; position:absolute; left:0; bottom:0;"></div>
+	<div id="webixID" class='text' style="position:absolute; left:0; bottom:0;"></div>
 	
-	<input type="button" value="Recenter" class='text' style='position:absolute; right:10px;
-		bottom:10px;' onclick="glviewer.zoomTo();"></input>
+	<input type="button" value="Recenter" class='text' style='font-size:80%; position:absolute;
+		right:10px; bottom:10px;' onclick="glviewer.zoomTo();"></input>
 	
 	<!--<hr style="margin: 0;">
 	
