Fix: Uploading to Previously Used Viewers + misc
- Fixed bug that made the display mode controls stop working for a
viewer
  if a files was uploaded in to a viewer with previously altered
settings
  - Resetting the display mode storage variables to default for both
    the new viewer and old viewer (if applicable)
  - Set the viewer controls back to the default values for the new
viewer
- Misc code cleanup:
  - Some improved commenteing and console logs
  - Renamed some components to prep for future addition of ligand
controls
  - Updated README

To Do:
- Implement separate heteroatom/ligand controls in the "Viewer Controls"
panel.
- Will probably need to modify the current compound controls to better
distinguish ligands

Bugs to fix:
x Attempting to use the surface control on an incompatible file
will cause it to stop working until Hydra is reloaded
  - Actual cause seems to be the conflicting commands issued by the
    mouse listener

Other, Known Bugs:
1) Chrome won't allow calls between the parent and iframes
  - Origins for the primary frame and iframe are both "null"
  -> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
   even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js
4) Still some strangeness with magenta bond connections in models
   3Dmol is reading from docking output.  Very minor now though.

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -28,10 +28,9 @@
 	var surfaces = []; //0 index will be for main comp; 1 will be for any ligand
 	
 	//Display settings variables. Follow same indexing scheme as surfaces[]
-	var compDisplay = [];
+	var structDisplay = [];
 	var surfDisplay = [];
 	var surfOpacity = [];
-	var showAlphaCs = [];
 	
 	toDefaultDisp(); //Set initial values of the setting vars
 	
@@ -44,25 +43,21 @@
 	//Set the default display settings for the viewer
 	//Eventually make a button to restore default settings -> call this
 	function toDefaultDisp() {
-		compDisplay[0] = 'Line';
-		compDisplay[1] = 'Line';
+		structDisplay[0] = 'Line';
+		structDisplay[1] = 'Line';
 		
 		surfDisplay[0] = 'surfNone';
 		surfDisplay[1] = 'surfNone';
 		
-		surfOpacity[0] = 95; //90% opaque by default (90% transparent)
+		surfOpacity[0] = 95; //95% opaque by default (95% transparent)
 		surfOpacity[1] = 95;
-		
-		showAlphaCs[0]=0; //Webix checkboxes: 0->not checked, 1->checked. Not booleans
-		showAlphaCs[1]=0;
 	}
 	
 	function getViewMode() {
 		var viewSettings = []; //Pseudo 2D array for exporting viewer's settings
-			viewSettings[0] = compDisplay;
+			viewSettings[0] = structDisplay;
 			viewSettings[1] = surfDisplay;
 			viewSettings[2] = surfOpacity;
-			viewSettings[3] = showAlphaCs;
 		
 		return viewSettings;
 	}
