Fix: prior "active viewer" surface applied to next
- Fixed bug causing the surface settings for the previous "active
  viewer" to get applied to the new "active viewer"
  - Added statement in setting components' "onChange" events to check
    that the new value differed from the active viewer's value
  - Changed what vals get passed to the setSurface fxn
  - Prevent unnecessary repainting and unintentional style carry over
- Renamed some variables for clarity

To Do:
- Implement separate heteroatom/ligand controls in the "Viewer Controls"
  panel.
- Will probably need to modify the current compound controls to better
  distinguish ligands

Bugs to fix:
Attempting to use the surface control on an incompatible file
will make that viewer unable to be cleared or display a new file
  - Throwing "surfArr is undefined" for 3Dmol.js line 26790

Other, Known Bugs:
1) Chrome won't allow calls between the parent and iframes
  - Origins for the primary frame and iframe are both "null"
  -> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
   even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js
4) Still some strangeness with magenta bond connections in models
   3Dmol is reading from docking output.  Very minor now though.

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -28,8 +28,8 @@
 	var surfaces = []; //0 index will be for main comp; 1 will be for any ligand
 	
 	//Display settings variables. Follow same indexing scheme as surfaces[]
-	var structDisplay = [];
-	var surfDisplay = [];
+	var structType = [];
+	var surfType = [];
 	var surfOpacity = [];
 	
 	toDefaultDisp(); //Set initial values of the setting vars
@@ -43,11 +43,11 @@
 	//Set the default display settings for the viewer
 	//Eventually make a button to restore default settings -> call this
 	function toDefaultDisp() {
-		structDisplay[0] = 'Line';
-		structDisplay[1] = 'Line';
+		structType[0] = 'Line';
+		structType[1] = 'Line';
 		
-		surfDisplay[0] = 'surfNone';
-		surfDisplay[1] = 'surfNone';
+		surfType[0] = 'surfNone';
+		surfType[1] = 'surfNone';
 		
 		surfOpacity[0] = 95; //95% opaque by default (95% transparent)
 		surfOpacity[1] = 95;
@@ -55,8 +55,8 @@
 	
 	function getViewMode() {
 		var viewSettings = []; //Pseudo 2D array for exporting viewer's settings
-			viewSettings[0] = structDisplay;
-			viewSettings[1] = surfDisplay;
+			viewSettings[0] = structType;
+			viewSettings[1] = surfType;
 			viewSettings[2] = surfOpacity;
 		
 		return viewSettings;
