Minor: border visibility
Minor alteration for improved visibility of the active viewer's border
- Changed borders to 3px wide (thus 6px between viewers)
- Changed active viewer's border color to limeGreen

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 			border-width: 10px;
 		}
 		.webix_view.inactiveViewer iframe{
-			border:2px solid white; /*Shorthand CSS property (ie not Webix unique)*/
+			border:3px solid white; /*Shorthand CSS property (ie not Webix unique)*/
 			box-sizing:border-box;
 		}
 		.webix_view.activeViewer iframe{
-			border:2px solid royalBlue;
+			border:3px solid limeGreen;
 			box-sizing:border-box;
 		}
 	   </style>
