Left panel to standard tabview; remv chain tags
- Moved tab buttons to top of left panel
- Changed appearance to normal tab buttons
- Should clarify how to use the panel
- Misc changes to var names
- Removed chain distinctions in the surface setting code

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -25,9 +25,9 @@
 	<script type="text/javascript">
 	var glviewer = null;
 	var labels = [];
-	var surfaces = []; //0 index will be for main comp; 1 will be for any ligand
+	var surfaceObjs = []; //0 index will be for main comp; 1 will be for any ligand
 	
-	//Display settings variables. Follow same indexing scheme as surfaces[]
+	//Display settings variables. Follow same indexing scheme as surfaceObjs[]
 	var structType = [];
 	var surfType = [];
 	var surfOpacity = [];
