Partial fix: +surf -> none -> +surf
Bug fix: add surface -> remove surface -> add surface
  Program fail on last add & surfaces stop working properly
*Only fixes this specific problem. Does not fix all surfArr
 is undefined problems
  - +surf -> upload -> +surf causes this problem still

Added command to delete the value of 3Dmol frame.html's
surfacesObjs[] at the relevant index
- This value now null whenever there is no surface

--- a/index.html
+++ b/index.html
@@ -134,13 +134,11 @@
 			//var surfType = listObj.getPopup().getList().getItem(itemID).value;
 				//What the list item actually displays
 			
-			console.log(glviewer.surfaces);
-			console.log(iViewer.$3Dmol.GLViewer.surfaces);
-			
 			if (iViewer.surfaceObjs[surfIndex] != null) {
 				console.log('Removing surface for '+coord);
 				glviewer.removeSurface(iViewer.surfaceObjs[surfIndex]),
-				iViewer.lastsurfstyle = 1;
+					iViewer.lastsurfstyle = 1;
+				delete iViewer.surfaceObjs[surfIndex];
 			}
 			
 			//Note: This can be set to work with specific chains (as in the 3Dmol example.html),
