Fix: +surf -> upload -> +surf
Fix: add surface -> upload new file -> add surface
  - Caused a surfArr is undefined error in 3Dmol
  - surfaceObjs[] now wiped on upload so that the setSurface
    command works with the new file properly

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -43,6 +43,9 @@
 	//Set the default display settings for the viewer
 	//Eventually make a button to restore default settings -> call this
 	function toDefaultDisp() {
+		delete surfaceObjs[0];
+		delete surfaceObjs[1];
+		
 		structType[0] = 'Line';
 		structType[1] = 'Line';
 		
