Added Ligand Controls + misc
- Added ligand controls
  - Added the controls to the Hydra UI
  - Altered display setting methods to work with heteroatoms
    (ie ligands)
    - Does NOT work with complexes based on chains
    - Chain marks get ignored as it would be complex to handle
- Misc:
  - clear_fxn() now resets the viewer vars to defaults
  - Changed default surface opacity to 100% to reduce comp load
  - Fixed up some comments
  - Housekeeping: deleted unused/commented out code

To Do:
- Investigate alt way for switching b/w panels on left
- Investigate saving compound lists

Other, Known Bugs:
1) Chrome won't allow calls between the parent and iframes
  - Origins for the primary frame and iframe are both "null"
  -> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
   even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js
4) Still some strangeness with magenta bond connections in models
   3Dmol is reading from docking output.  Very minor now though.

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?
Google seems to have found a workaround for Google Maps...

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -52,8 +52,9 @@
 		surfType[0] = 'surfNone';
 		surfType[1] = 'surfNone';
 		
-		surfOpacity[0] = 95; //95% opaque by default (95% transparent)
-		surfOpacity[1] = 95;
+		//Note that 100% and 0% opacity are the least computationally intensive
+		surfOpacity[0] = 100; //100% opaque by default (0% transparent)
+		surfOpacity[1] = 100;
 	}
 	
 	function getViewMode() {
