Fix: replaced splice()'s with if()'s + misc
Minor update- temp fix:
- Splice was causing bugs when viewer was used multiple times
  - Surfaces would stop being removable after initial clear -> upload
-> Changed splice()'s in removeSurface() & removeAllSurfaces()
    back to delete's
  - Added if's to prevent surfArr from being used if surfaces[n] was
    not defined (ie blank)
  - Temp solution: 3Dmol.js dev working on a better fix

Misc:
- Deleted the _MACOSX folder. Artifact from dev switching from OSX to
  Windows
- Changed console msg for "Invalid coordinates" from error to warn

--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
 	   	position: absolute; top: 0; left: 0;
 			overflow: auto;
 	   }
-		.activeViewer{
-			border-color: #69A5FA;
-			border-style: solid;
-			border-width: 10px;
-		}
 		.webix_view.inactiveViewer iframe{
 			border:3px solid white; /*Shorthand CSS property (ie not Webix unique)*/
 			box-sizing:border-box;
@@ -381,7 +376,7 @@
 				return true;
 			}
 			else{
-				console.error('Invalid coordinates');
+				console.warn('Invalid coordinates');
 				return false;
 			}
 		}
