Raw Output Parser UI & cleanup
- Created GUI for the raw docking output processor
  - Made as a popup window with 2 cells to switch between: one for pre-
    processing, and one for processing confirmation.
  - Does not currently have any actual functionality
- Made commented-out code for passing mouse events (synchronizing
  model transformations b/w viewers)
- Moved Shelby's code for retrieving ZINC IDs to a separate function
- Deleted some old, unused code
- Renamed iframeClicked() to setActiveViewer()

Other, Known Bugs:
1) Chrome won't allow calls between the parent and iframes
  - Origins for the primary frame and iframe are both "null"
  -> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
   even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js
4) Still some strangeness with magenta bond connections in models
   3Dmol is reading from docking output.  Very minor now though.

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?
Google seems to have found a workaround for Google Maps...

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -23,6 +23,8 @@
 <body>
 	
 	<script type="text/javascript">
+	var coords; //For use with the mouse-event passing
+	
 	var glviewer = null;
 	var labels = [];
 	var surfaceObjs = []; //0 index will be for main comp; 1 will be for any ligand
@@ -37,6 +39,10 @@
 	//Group of functions for working with the Hydra parent code
 	function setGridCoordinates(gc) {
          $('#webixID').html(gc); //Pass gc in to show between the div tags
+			
+			//Split the passed coordinates text into coords[0] = x; coords[1] = y
+			coords = gc.split(',');
+			
          console.log("Coordinates set: "+gc);
    }
 	
@@ -140,7 +146,7 @@
 		glviewer = $3Dmol.createViewer("gldiv", {
 			defaultcolors : $3Dmol.rasmolElementColors
 		});
-		glviewer.setBackgroundColor(0xffffff); //White background
+		//glviewer.setBackgroundColor(0xffffff); //White background
 		glviewer.setBackgroundColor(0x000000);
 
 		receptorModel = m = glviewer.addModel(data, "pqr");
@@ -159,10 +165,22 @@
 		
 		//Fires when mouse button is pressed (before release) on anything within the 'root'
 		//(topmost) tags: <html></html> in this case
-		//Calls iframeClicked(...) in the Hydra UI to make this element selected
+		//Calls setActiveViewer(...) in the Hydra UI to make this element selected
 		$(':root').mousedown(function(){
-			window.parent.iframeClicked($('#webixID').text(), getViewMode());
+			window.parent.setActiveViewer($('#webixID').text(), getViewMode());
 		});
+		/*$(':root').contents().on("click dblclick mousedown mousemove mouseover mouseup",
+		function (e) {
+			if(window.parent.$$('syncMove').getValue()==1 &&
+				window.parent.$$('activeCoord').getValue()==$('#webixID').text())
+			{
+				//Haha, as might have been expected, this causes a buffer overflow.  Whoops >.>
+				window.parent.transferMouseEvent(coords, e);
+				console.log($('#webixID').text());
+			}
+			else
+				console.log('not '+$('#webixID').text());
+      });*/
 	});
 	</script>
 	
