--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 			</div>
 		</div>
 		
+		<script src="UiRawProcessor.js" charset="utf-8"></script>
+		<!--Must be loaded before Hydra UI-->
 		<script src="webixUI.js" charset="utf-8"></script>
 		<script src="ZINC_code.js"></script>
 		<script src="fileHandling.js"></script>
