Rename: webixUI.js -> UiHydra.js
Renamed the main Hydra GUI's file to be more descriptive now that there
is also a separate UI for the raw docking output processor

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		
 		<script src="UiRawProcessor.js" charset="utf-8"></script>
 		<!--Must be loaded before Hydra UI-->
-		<script src="webixUI.js" charset="utf-8"></script>
+		<script src="UiHydra.js" charset="utf-8"></script>
 		<script src="ZINC_code.js"></script>
 		<script src="fileHandling.js"></script>
 		<script src="UItoViewers.js"></script>
