Added Uploader to UiRawProcessor
- Added an uploader to the first view of the processor
  - Adds files to the procInTable
- "Remove" button in processor's first view now works
- Created separate tables for filtered protein and ligand
  files to be displayed after pressing "Next"
  - Cleared upon pressing "Back"

--- a/text/procOutputInfo.html
+++ b/text/procOutputInfo.html
@@ -1,4 +1,10 @@
 <p>
-"The data from the identified ligand files has been added onto the end of the identified protein files.<br/>
-The ligand files and all other files will be discarded.  Please confirm that all desired protein files are present."
+The filtered protein files to be used for processing are displayed on the top left;
+the filtered ligand files to be used for processing are displayed on the bottom left.<br/>
+Data from the identified ligand files wll added to the end of the protein files.<br/>
+<br/>
+Any files not listed here will be discarded after processing.  Please confirm that
+all desired protein files are present.<br/>
+If some files are not present, please check your inputted filters for typos and confirm that
+your file names are in a compatible format.
 </p>
