--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		<script src="UiRawProcessor.js" charset="utf-8"></script>
 		<!--Must be loaded before Hydra UI-->
 		<script src="UiHydra.js" charset="utf-8"></script>
+		<script src="rawProcessorFxns.js"></script>
 		<script src="ZINC_code.js"></script>
 		<script src="fileHandling.js"></script>
 		<script src="UItoViewers.js"></script>
