File concatenation + misc improvements
- Initial implementation of file processing
  - "ATOM" tags in ligand file -> "HETATM"
  - Protein data appended with ligand data then added to main table
  - Processor is closed upon pressing "OK" and its tables cleared
- Bug fix: Close function was referencing old component names
- Moved the addFilteredFiles() code to the top of rawProcessorFxns.js
- Added more info to procInputInfor.html
- Updated README

To do:
- Make processor write the compound ZINC ID to the outputted file
- Add a popup or sliding panel with more compound information to the
  right side that Shelby coded
  - Will need to include a new database file to reference
- Store ligID when processing to ensure proper match
- Fix model transformation/translation syncing

Known Bugs:
1) Chrome won't allow calls between the parent and iframes
- Origins for the primary frame and iframe are both "null"
-> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
even though the viewers themselves are still responsive.
- "Error: WebGL: Exceeded 16 live WebGL contexts for this
principal, losing the least recently used one."
- This is due to limitations built into Three49custom.js
4) Still some strangeness with magenta bond connections in models
3Dmol is reading from docking output.  Very minor now though.
5) Sorting datatables does not work if placeholder 0's are not used
when dealing with numbers of different magnitudes

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?
Google seems to have found a workaround for Google Maps...

--- a/text/procInputInfo.html
+++ b/text/procInputInfo.html
@@ -10,7 +10,7 @@ Use the following field encapsulated in square brackets as needed:<br/>
 </ul>
 Separate each field and other name components with a period ".".  Please note that your file
 names must be formatted to have the parts separated by "." otherwise this parser will not
-work.<br/>
+work. Additioanlly, filters are <strong>case sensitive</strong>.<br/>
 Sets of files will be identified by matching [ligID]. Fields <strong>MAY NOT</strong> contain
 any "<strong>.</strong>" characters.  If any [*] field is broken up by "<b>.</b>" chars, please
 use the field multiple times.<br/>
