--- a/text/procInputInfo.html
+++ b/text/procInputInfo.html
@@ -19,6 +19,9 @@ Text not encapsulated in [] will be treated as a constant present in all relevan
 files.<br/>
 Note that file type endings (eg '.pdb') are not required but should be included to
 avoid errors.<br/>
+Though optional, the "metadata containing" file is necessary for compound metadata
+to be identified by the program. A .mol2 file is preferred, but any file format is
+accepted as long as it contains the ZINC ID at minimum.
 Ex: [*].[*].3_top.[ligID].final_pose.amber.pdb<br/>
 <ul>
    <li>Will identify a1.noH.3_top.1.final_pose.amber.pdb as a protein file paired with ligand 1.</li>
